<resources>
    <string name="app_name">Telkom</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="forgot_password">forgot password?</string>

    <string name="e_lora_e">With</string>
    <string name="about_ilab_link">About Ilab Africa</string>
    <string name="iot_header">IoT Solutions</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="agriculture">Agriculture</string>
    <string name="energy">Energy</string>
    <string name="water">Water</string>
    <string name="environment">Environment</string>
    <string name="faq">FAQ</string>
    <string name="sign_out">Sign Out</string>
    <string name="altitude">Altitude:</string>
    <string name="temperature">Temperature(°C)</string>
    <string name="time">Time:</string>
    <string name="humidity">Humidity(%)</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_agriculture">Agriculture</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="telkom_node">Telkom</string>
    <string name="node">Node</string>
    <string name="device_info">Device information</string>


    <string name="hello_blank_fragment">Hello Beatrice</string>
    <string name="device_title">Device Info</string>
    <string name="data_title">Data</string>
    <string name="chart_title">Charts</string>
    <string name="location">Location</string>
    <string name="average_temperature">Average Temperature(°C)</string>
    <string name="average_humidity">Average Humidity(%)</string>
    <string name="view_charts">View Charts</string>
    <string name="bmp">Pressure</string>
    <string name="signal_level">Signal Level</string>
    <string name="battery_level">Battery Level</string>
    <string-array name="nodes_elements">
        <item>Ilab Node</item>
        <item>Telkom Node</item>
    </string-array>
    <string name="uname">admin</string>
    <string name="uname1">telkom</string>
    <string name="upass">012345</string>
    <string name="title_activity_nodes">Nodes</string>
    <string name="last_seen">Last Seen</string>
    <string name="lux">Lux</string>
    <string name="soil_moisture">Soil moisture</string>
    <string name="node_1">Node 1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_node">Node</string>
    <string name="gateway_id">Gateway id</string>

</resources>
