<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
        android:icon="@drawable/baseline_dashboard_black_18dp"
        android:title="@string/dashboard"/>

        <item
                android:id="@+id/nav_agriculture"

                android:title="@string/agriculture"/>
        <item
                android:id="@+id/nav_energy"

                android:title="@string/energy"/>
        <item
                android:id="@+id/nav_environment"

                android:title="@string/water"/>
        <item
                android:id="@+id/nav_water"

                android:title="@string/environment"/>


    </group>

    <item android:title="">
        <menu>
            <item
                    android:id="@+id/nav_settings"

                    android:title="@string/settings"/>
            <item
                    android:id="@+id/nav_faq"

                    android:title="@string/faq"/>
            <item
                    android:id="@+id/nav_sign_out"
                    android:title="@string/sign_out"/>
        </menu>
    </item>

</menu>
