<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/gateways_list_items_layout">

        <TextView
                android:id="@+id/last_seen_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:padding="@dimen/dp6_padding"
                android:text="@string/last_seen"/>

        <TextView
                android:id="@+id/last_seen_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="@dimen/dp6_padding"/>

        <TextView
                android:id="@+id/gateway_id_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:padding="@dimen/dp6_padding"
                android:text="@string/gateway_id"/>

        <TextView
                android:id="@+id/gateway_id_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="@dimen/dp6_padding"/>


        <TextView
                android:id="@+id/signal_level_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp6_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/signal_level"/>

        <TextView
                android:id="@+id/signal_level_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="@dimen/dp6_padding"/>


</LinearLayout>