<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Node">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
        <Spinner
                android:id="@+id/node_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical"
                android:textAlignment="center"
        android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/location_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
        android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/location_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="@dimen/padding"/>
        <TextView
                android:id="@+id/avg_temp_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/average_temperature"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/avg_temp_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
                android:id="@+id/avg_humidity_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_humidity"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:textColor="@color/color_black"/>

        <TextView
                android:id="@+id/humidity_value_txt_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <Button
                android:id="@+id/node_charts_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_below="@+id/humidity_value_txt_view"

                android:text="@string/view_charts"
                android:background="@color/text_color_orange"
                android:textColor="@color/color_white"/>

    </LinearLayout>

</ScrollView>