<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Data"
>

    <!--TODO replace the spinner with textview when an item is selscted-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    android:layout_gravity="center_vertical">

        <Spinner
                android:id="@+id/data_nodes_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_horizontal"
                android:padding="@dimen/margin_horizontal"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/temp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/temperature"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/temp_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/humidity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/humidity"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/humidity_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/BMP_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/bmp"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/BMP_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/signal_level_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/signal_level"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/signal_level_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:padding="@dimen/padding"/>

        <TextView
                android:id="@+id/battery_level_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/color_black"
                android:text="@string/battery_level"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/battery_level_value_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textAlignment="center"
                android:padding="@dimen/padding"/>


    </LinearLayout>

</ScrollView>